--- a/assets/css/baselayout.css
+++ b/assets/css/baselayout.css
@@ -65,6 +65,7 @@ body {
 
 .name_age_location_container {
   margin-top: 2rem;
+  font-size: 1.5rem;
   font-weight: var(--font-weight-700);
 }
 
@@ -75,6 +76,7 @@ body {
 .location {
   color: var(--dark-gray);
   margin-top: 1.25rem;
+  font-size: 1.8rem;
   font-weight: var(--font-weight-400);
 }
 
